add some main html elements and delete useless things

--- a/index.html
+++ b/index.html
@@ -13,30 +13,12 @@
         </ul>
         <h2>HTML დოკუმენტის სტრუქტურა</h2>
         <p>HTML დოკუმენტის სტრუქტურა მოიცავს DOCTYPE, head და body ნაწილებს. სემანტიკური ელემენტები body-ში ამარტივებენ შინაარსის დანიშნულების განსაზღვრას.</p>
+        <h2>მთავარი სემანტიკური HTML ელემენტები</h2>
+        <h3>&ltarticle&gtელემენტი</h3>
+        <p>ეს გამოიყენება დამოუკიდებელი, თავისთავად არსებული შინაარსის განსაზღვრად. ის სრულად გამართულად გამოიყურება დამოუკიდებლად.</p>
     </body>
 </html>
-
-<!-- სემანტიკური მარკირება
-127.0.0.1:5500/html8-2.html
-Phttps://www.pinter... Ghttps://www.cgpe...
-o
-CG http://www.cgmee...
-http://www.digitalt... CG http://www.cgmee...
-https://www.youtu...
-https://www.youtu...
-https://www.youtu...
-
-•
-
-•
-
-•
-
-
-
-მთავარი სემანტიკური HTML ელემენტები
-<article> ელემენტი
-ეს გამოიყენება დამოუკიდებელი, თავისთავად არსებული შინაარსის განსაზღვრად. ის სრულად გამართულად გამოიყურება დამოუკიდებლად.
+<!--
 <section> ელემენტი
 გამოიყენება შინაარსის თემატური ჯგუფისთვის. ის გვერდის შინაარსს იყოფს და ორგანიზებულ ბლოკებად აჯგუფებს.
 მონათესავე ინფორმაცია, როგორიცაა გვერდითი პანელი, შეიძლება მოთავსდეს <aside> ელემენტში.
