--- a/index.html
+++ b/index.html
@@ -16,14 +16,10 @@
         <h2>მთავარი სემანტიკური HTML ელემენტები</h2>
         <h3>&ltarticle&gtელემენტი</h3>
         <p>ეს გამოიყენება დამოუკიდებელი, თავისთავად არსებული შინაარსის განსაზღვრად. ის სრულად გამართულად გამოიყურება დამოუკიდებლად.</p>
+        <h3>&ltsection&gt ელემენტი</h3>
+        <p>გამოიყენება შინაარსის თემატური ჯგუფისთვის. ის გვერდის შინაარსს იყოფს და ორგანიზებულ ბლოკებად აჯგუფებს.</p>
+        <p>მონათესავე ინფორმაცია, როგორიცაა გვერდითი პანელი, შეიძლება მოთავსდეს &ltaside&gt ელემენტში.</p>
+        <h2>HTML-ის ვერიფიკაცია და block და inline ელემენტები</h2>
+        <P>ვერიფიკაცია უზრუნველყოფს, რომ თქვენი HTML დოკუმენტი შეესაბამება ენის წესებს. block ელემენტებია &ltdiv&gt, &ltp&gt, &lth1&gt–&lth6&gt, და &ltsection&gt. inline ელემენტებია &ltspan&gt, &lta&gt, &ltstrong&gt, და &ltem&gt. &copy 2024 სემანტიკური HTML-ის სწავლა</P>
     </body>
 </html>
-<!--
-<section> ელემენტი
-გამოიყენება შინაარსის თემატური ჯგუფისთვის. ის გვერდის შინაარსს იყოფს და ორგანიზებულ ბლოკებად აჯგუფებს.
-მონათესავე ინფორმაცია, როგორიცაა გვერდითი პანელი, შეიძლება მოთავსდეს <aside> ელემენტში.
-HTML-ის ვერიფიკაცია და block და inline ელემენტები
-ვერიფიკაცია უზრუნველყოფს, რომ თქვენი HTML დოკუმენტი შეესაბამება ენის წესებს. block ელემენტებია <div>, <p>, <h1>–<h6>, და <section>. inline ელემენტებია <span>, <a>, <strong>, და <em>. © 2024 სემანტიკური HTML-ის სწავლა
-ID
-g
->> -->
