--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Html 8.1</title>
+        <link rel="icon" href="./icon.svg">
     </head>
     <body>
         <h1>სემანტიკური HTML-ის გაგება</h1>
